# stock_monitor

./: .gitignore  README.md  config.py  monitor.py  pyproject.toml  requirements.txt  watchlist.txt  watchlist_sa.txt
models/: AAPL.pt  AAPL_scaler.npz  ADBE.pt  ADBE_scaler.npz  AMD.pt  AMD_scaler.npz  AMZN.pt  AMZN_scaler.npz  AVGO.pt  AVGO_scaler.npz  COST.pt  COST_scaler.npz  CRM.pt  CRM_scaler.npz  GOOGL.pt  GOOGL_scaler.npz  INTC.pt  INTC_scaler.npz  META.pt  META_scaler.npz  MSFT.pt  MSFT_scaler.npz  NFLX.pt  NFLX_scaler.npz  NVDA.pt  NVDA_scaler.npz  PEP.pt  PEP_scaler.npz  TSLA.pt  TSLA_scaler.npz
reports/: report-20260426-1626.json  report-20260426-1632.json  report-20260426-1855.json  report-20260426-1908.json
stock_monitor/: analyzer.py  backtest.py  config.py  data.py  features.py  gainers.py  market_data.py  model.py  news.py  predictor.py  report.py  targets.py  yahoo_client.py
stock_monitor/model/: ensemble.py  gbm.py  lstm_clf.py
stock_monitor/models1/: ensemble.py  lstm_clf.py
telegram_sender/: sender.py
tests/: test_analyzer.py  test_data.py  test_predictor.py  test_report.py
