[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "stock-monitor"
version = "1.0.0"
description = "AI-powered stock prediction engine with GBM + LSTM ensemble"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31,<3",
    "pandas>=2.0,<3",
    "numpy>=1.24,<2",
    "torch>=2.0,<3",
    "scikit-learn>=1.3,<2",
    "lightgbm>=4.0,<5",
    "beautifulsoup4>=4.12,<5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
stock-monitor = "monitor:main"

[tool.setuptools.packages.find]
include = ["stock_monitor*", "telegram_sender*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
